# amazon-keyspaces-toolkit

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  THIRD-PARTY-LICENSES.txt  cqlshrc  ks_redis.py
.github/ISSUE_TEMPLATE/: bug_report.md
AWS CloudShell/: README.md  setup.sh
aws-cloudshell/: README.md  setup.sh
cloudshell/: README.md  setup.sh
cloudshell-cqlsh_integration_sigv4/: cqlshrc  setup.sh
cqlsh-expansion/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cqlsh-expansion/config/: cqlshrc_template  post_install.py  set.py
cqlsh-expansion/cqlsh_expansion/: __main__.py  __main_expansion__.py  cqlsh.py  cqlsh_expansion.py  cqlshrc_template  describe_usage.py  post_install.py
cqlsh-expansion/cqlshlib/: describe_function3x.py
cqlsh-expansion/cqlshlib/test/: basecase.py
cqlsh-expansion/pylib/cqlshlib/: copyutil.py  legacydesc3x.py
cqlsh-expansion/tests/: test_cqlsh-expansion.sh
distro/: THIRD-PARTY-LICENSES.txt
docker/: README.md
docker/test/: README.md  default_cqlshrc  toolkit-test.sh
redis-keyspaces/: ks_redis.py  test_functions.py
test/: README.md  test.cql  toolkit-test.sh
