[metadata]
name = cqlsh-expansion
version = 0.6.5
description = The cqlsh-expansion utility extends native cqlsh functionality to include parameters and capabilities specific to Amazon Keyspaces such as support for Sigv4 Authentication.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cql, cqlsh, cqlsh-expansion, amazon-keyspaces, ApacheCassandra
url = https://github.com/aws-samples/amazon-keyspaces-toolkit/tree/master/cqlsh-expansion
project_urls =
author_email = srirangi@amazon.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[options]
python_requires = ~= 2.7
scripts = bin/cqlsh-expansion, bin/cqlsh-expansion.py, bin/cqlsh, bin/cqlsh.py
