[metadata]
name = cqlsh-expansion
version = 0.8.9
description = The cqlsh-expansion utility extends native cqlsh functionality to include parameters and capabilities specific to Amazon Keyspaces such as support for Sigv4 Authentication.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cql, cqlsh, cqlsh-expansion, amazon-keyspaces, ApacheCassandra
url = https://github.com/aws-samples/amazon-keyspaces-toolkit/tree/master/cqlsh-expansion
project_urls =
license_files =
     THIRD-PARTY-LICENSES.txt
     LICENSE.txt

classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
scripts = bin/cqlsh-expansion, bin/cqlsh-expansion.py, bin/cqlsh, bin/cqlsh.py
